--- a/philo/Makefile
+++ b/philo/Makefile
@@ -15,7 +15,7 @@ HEADER 	= philo.h
 CC		= gcc
 CFLAGS	= -Wall -Werror -Wextra
 # CFLAGS	+= -fsanitize=thread -g
-CFLAGS	+= -fsanitize=address -g
+# CFLAGS	+= -fsanitize=address -g
 SRC_DIR	= philo #$(shell find src -type f -name "*.c")
 OBJ		= $(SRC:%.c=obj/%.o)
 OBJ_DIR	= obj
